# mlops-movies-recommendation

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  retrain.yml  security.yml
airflow/dags/: feast_materialization_dag.py  ingestion_dag.py  trigger_kubeflow_dag.py
airflow/plugins/: mlops_plugin.py
configs/: airflow.yaml  mlflow.yaml  model_config.yaml
data/feast/offline/: movie_features.csv  user_features.csv
data/schemas/: data_schema.py
feast/: feast_materialize.py  feature_store.yaml
feast/entities/: entities.py
feast/features/: user_features.py
feast/store/: feature_store_local.py
infrastructure/docker/airflow/: Dockerfile
monitoring/drift/: drift_detector.py  prediction_monitor.py
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_training_experiment.ipynb  04_model_evaluation.ipynb
pipelines/: pipeline.py  pipeline.yaml
pipelines/components/: evaluate_model.py  prepare_data.py  train_model.py
scripts/: ci_local.sh  init_postgres.sql  setup_airflow.sh  setup_feast.sh  setup_minio.sh  setup_mlflow.sh  setup_serving.sh
serving/fastapi/: main.py  model_loader.py  schemas.py  test_server.py
tests/: conftest.py
tests/api/: test_api.py
tests/integration/: test_pipeline.py
tests/ml/: test_model_performance.py
tests/unit/: test_data_schema.py  test_features.py
training/: data_loader.py  evaluate.py  train.py  train_with_feast.py
training/models/: naive_bayes_model.py
(+10 files in other folders)
