[tool.poetry]
name = "mlops-movies"
version = "0.1.0"
description = "Système de recommandation MovieLens — Naïve Bayes — Pipeline MLOps"
authors = ["MLOps Team"]
python = "^3.10"

[tool.poetry.dependencies]
# ML core
scikit-learn  = "^1.3"
pandas        = "^2.0"
numpy         = "^1.24"
scipy         = "^1.11"
pyarrow       = "^14.0"

# MLflow + stockage
feast         = "^0.35"
  redis         = "^5.0"

  # MLflow + stockage
  mlflow        = "^2.9"
boto3         = "^1.28"
psycopg2-binary = "^2.9"

# Serving
fastapi       = "^0.104"
uvicorn       = "^0.24"
pydantic      = "^2.0"
prometheus-client = "^0.18"

# Utils
python-dotenv = "^1.0"
pyyaml        = "^6.0"

[tool.poetry.dev-dependencies]
pytest   = "^7.4"
black    = "^23.0"
ruff     = "^0.1"
jupyter  = "^1.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
